--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage": "https://codebypr.github.io/SC",
+  "homepage": "https://codebypr.github.io/School",
   "name": "-",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "github-pages -d dist",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
