--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://codebypr.github.io/School",
+  "homepage": "https://codebypr.github.io/",
   "name": "-",
   "private": true,
   "version": "0.0.0",
